--- a/iframehomepage.html
+++ b/iframehomepage.html
@@ -188,7 +188,7 @@
 
   <script>
 
-    const sessionReplayTracking = window.sessionReplay.plugin({ sampleRate: 1 });
+    var sessionReplayTracking = window.sessionReplay.plugin({ sampleRate: 1 });
     window.amplitude.add(sessionReplayTracking);
     window.amplitude.init('7b69efeb77de31ce9328e6a6a45d80a6', {
       fetchRemoteConfig: false,
